--- a/www/index.html
+++ b/www/index.html
@@ -182,7 +182,7 @@
                             </div>
                             <div class="vertical-line"></div>
                             <div class="logo-right">
-                                <img src="img/abre-cl_logo-blanco.png" alt="">
+                                <img src="img/hacks_logo.png" alt="">
                             </div>
                         </div>
                         <!-- logo end -->
